--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     ],
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
-    }
+    },
+    "testEnvironment": "node"
   },
   "scripts": {
-    "build": "webpack -w"
+    "test": "jest --env=node",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
