--- a/package.json
+++ b/package.json
@@ -4,17 +4,6 @@
   "description": "",
   "main": "index.js",
   "jest": {
-    "verbose": true,
-    "modulePaths": [
-      "<rootDir>"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    },
     "testEnvironment": "node"
   },
   "scripts": {
@@ -42,6 +31,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "dateformat": "^4.4.1",
     "rss-parser": "^3.10.0"
