node Test -> jsDom 변경

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "jsdom"
   },
   "scripts": {
-    "test": "jest --env=node",
+    "test": "jest",
     "build": "webpack"
   },
   "keywords": [],
