--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
-    "dateformat": "^4.4.1",
-    "rss-parser": "^3.10.0"
+    "axios": "^0.21.1"
   }
 }
